--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   --azul:#0b3c5d;
   --azul2:#1d70b8;
   --verde:#0f9d58;
-  --rojo:#d93025;
+  --amarillo:#fbbc04;
   --blanco:#fff;
 }
 
@@ -65,7 +65,7 @@ button{
 
 .btn-buscar{background:var(--azul2);color:#fff}
 .btn-entrada{background:var(--verde);color:#fff}
-.btn-salida{background:var(--rojo);color:#fff}
+.btn-salida{background:var(--amarillo);color:#000}
 
 .foto{
   width:110px;
@@ -159,7 +159,7 @@ button{
 </div>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycby7BUOlm-_0txMyHLX8_fhL0IWj-S4yUIzSkluwkNwSMTRI0QbnxSa9sYfazEnOxTAB/exec";
+const API_URL = "https://script.google.com/macros/s/AKfycbzyKkyMcw9vfFuNcfXC1YoglD4uXaKIo-ijQi0SBKl-YKRk367UWqckvMZPhxVwictm/exec";
 const QR_VALIDO = "RRHH_ASISTENCIA_OK";
 
 let trabajador = {};
@@ -176,41 +176,54 @@ setInterval(()=>{
                     d.toLocaleTimeString("es-PE");
 },1000);
 
-/* 🔹 FUNCIÓN AGREGADA: fuerza permiso y ubicación actual */
-function obtenerUbicacionActual(ok, error){
-  if(!navigator.geolocation){
-    error();
+/* 📍 UBICACIÓN OPTIMIZADA */
+function obtenerUbicacionActual(ok){
+  if (!navigator.geolocation) {
+    mostrarAlerta("Este dispositivo no soporta GPS");
     return;
   }
 
-  navigator.permissions?.query({ name: "geolocation" }).then(() => {
-    navigator.geolocation.getCurrentPosition(
-      ok,
-      error,
-      {
-        enableHighAccuracy: true,
-        maximumAge: 0,
-        timeout: 15000
+  loader.style.display = "flex";
+
+  navigator.geolocation.getCurrentPosition(
+    p=>{
+      loader.style.display = "none";
+
+      if (p.coords.accuracy > 50) {
+        mostrarAlerta(
+          "Ubicación poco precisa (" +
+          Math.round(p.coords.accuracy) +
+          " m).\n\nEspere unos segundos y vuelva a intentar."
+        );
+        return;
       }
-    );
-  }).catch(()=>{
-    navigator.geolocation.getCurrentPosition(
-      ok,
-      error,
-      {
-        enableHighAccuracy: true,
-        maximumAge: 0,
-        timeout: 15000
-      }
-    );
-  });
+
+      ok(p);
+    },
+    e=>{
+      loader.style.display = "none";
+
+      let msg = "No se pudo obtener la ubicación.\n\n";
+      if (e.code === 1) msg += "Revise permisos de ubicación.";
+      else if (e.code === 2) msg += "Active el GPS.";
+      else if (e.code === 3) msg += "La ubicación está tardando demasiado.";
+      else msg += "Revise GPS y batería.";
+
+      mostrarAlerta(msg);
+    },
+    {
+      enableHighAccuracy:true,
+      timeout:20000,
+      maximumAge:0
+    }
+  );
 }
 
 function buscar(){
   dni.value = dni.value.replace(/\D/g,'');
   if(dni.value.length !== 8) return mostrarAlerta("DNI inválido");
 
-  loader.style.display = "flex";
+  loader.style.display="flex";
 
   fetch(API_URL,{
     method:"POST",
@@ -235,9 +248,7 @@ function abrirQR(tipo){
   bloqueado = false;
   qrModal.style.display = "flex";
 
-  if(!qr){
-    qr = new Html5Qrcode("reader");
-  }
+  if(!qr) qr = new Html5Qrcode("reader");
 
   qr.start({facingMode:"environment"},{fps:8,qrbox:200},txt=>{
     if(txt !== QR_VALIDO || bloqueado) return;
@@ -254,37 +265,34 @@ function cerrarQR(){
 }
 
 function registrar(){
-  loader.style.display="flex";
+  obtenerUbicacionActual(p=>{
+    loader.style.display="flex";
 
-  obtenerUbicacionActual(
-    p=>{
-      fetch(API_URL,{
-        method:"POST",
-        body:new URLSearchParams({
-          action:"registrar",
-          dni:trabajador.dni,
-          nombre:trabajador.nombre,
-          cargo:trabajador.cargo,
-          tipo:tipoActual,
-          lat:p.coords.latitude,
-          lng:p.coords.longitude,
-          deviceId
-        })
+    fetch(API_URL,{
+      method:"POST",
+      body:new URLSearchParams({
+        action:"registrar",
+        dni:trabajador.dni,
+        nombre:trabajador.nombre,
+        cargo:trabajador.cargo,
+        tipo:tipoActual,
+        lat:p.coords.latitude,
+        lng:p.coords.longitude,
+        accuracy:p.coords.accuracy,
+        deviceId
       })
-      .then(r=>r.json())
-      .then(r=>{
-        if(!r.ok) throw r.mensaje;
-        mostrarAlerta(r.mensaje);
-        setTimeout(()=>location.reload(),1200);
-      })
-      .catch(e=>mostrarAlerta(e))
-      .finally(()=>loader.style.display="none");
-    },
-    ()=>{
-      loader.style.display="none";
-      mostrarAlerta("Debe activar la ubicación para registrar asistencia");
-    }
-  );
+    })
+    .then(r=>r.json())
+    .then(r=>{
+      if(!r.ok) throw r.mensaje;
+      mostrarAlerta(r.mensaje);
+      setTimeout(()=>location.reload(),1200);
+    })
+    .catch(()=>{
+      mostrarAlerta("No se pudo registrar. Revise conexión y GPS.");
+    })
+    .finally(()=>loader.style.display="none");
+  });
 }
 
 function mostrarAlerta(m){
@@ -298,11 +306,10 @@ function cerrarAlerta(){
 </script>
 
 <script>
-/* REGISTRO SERVICE WORKER */
+/* SERVICE WORKER */
 if ("serviceWorker" in navigator) {
   window.addEventListener("load", () => {
-    navigator.serviceWorker.register("sw.js")
-      .catch(()=>{});
+    navigator.serviceWorker.register("sw.js").catch(()=>{});
   });
 }
 </script>
