--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <meta name="theme-color" content="#0b3c5d">
 
-<link rel="manifest" href="./manifest.json">
+<link rel="manifest" href="manifest.json">
 
-<script src="https://unpkg.com/html5-qrcode" defer></script>
+<script src="https://unpkg.com/html5-qrcode"></script>
 
 <style>
 :root{
@@ -101,6 +101,29 @@ button{
   animation:spin 1s linear infinite;
 }
 @keyframes spin{to{transform:rotate(360deg)}}
+
+/* ===============================
+   🔍 ANIMACIÓN BUSCANDO (NUEVO)
+   =============================== */
+body.buscando::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  background:rgba(29,112,184,.18);
+  animation:buscandoFlash 1s ease-in-out infinite alternate;
+  z-index:-1;
+}
+@keyframes buscandoFlash{
+  from{opacity:.35}
+  to{opacity:.7}
+}
+body.buscando .card{
+  animation:buscandoCard 1s ease-in-out infinite alternate;
+}
+@keyframes buscandoCard{
+  from{transform:scale(.98)}
+  to{transform:scale(1)}
+}
 </style>
 </head>
 
@@ -153,44 +176,21 @@ let tipoActual = "";
 let qr = null;
 let bloqueado = false;
 
-const reloj = document.getElementById("reloj");
-
 const deviceId = localStorage.getItem("DEVICE_ID") || crypto.randomUUID();
 localStorage.setItem("DEVICE_ID", deviceId);
 
 setInterval(()=>{
   const d = new Date();
-  reloj.innerText =
-    d.toLocaleDateString("es-PE") + " " +
-    d.toLocaleTimeString("es-PE");
+  reloj.innerText = d.toLocaleDateString("es-PE")+" "+d.toLocaleTimeString("es-PE");
 },1000);
 
-// Pre-carga permiso GPS
 navigator.geolocation.getCurrentPosition(()=>{},()=>{});
-
-// Ubicación SIN restricciones
-function obtenerUbicacionActual(ok){
-  if(!navigator.geolocation){
-    mostrarAlerta("Este dispositivo no soporta ubicación.");
-    return;
-  }
-  loader.style.display="flex";
-  navigator.geolocation.getCurrentPosition(
-    p=>{
-      loader.style.display="none";
-      ok(p);
-    },
-    ()=>{
-      loader.style.display="none";
-      mostrarAlerta("No se pudo obtener la ubicación.");
-    },
-    { enableHighAccuracy:true }
-  );
-}
 
 function buscar(){
   dni.value = dni.value.replace(/\D/g,'');
   if(dni.value.length!==8) return mostrarAlerta("DNI inválido");
+
+  document.body.classList.add("buscando"); // ✅ NUEVO
 
   loader.style.display="flex";
 
@@ -210,7 +210,10 @@ function buscar(){
     foto.src = trabajador.foto || "https://via.placeholder.com/110";
   })
   .catch(e=>mostrarAlerta(e))
-  .finally(()=>loader.style.display="none");
+  .finally(()=>{
+    loader.style.display="none";
+    document.body.classList.remove("buscando"); // ✅ NUEVO
+  });
 }
 
 function abrirQR(tipo){
@@ -263,6 +266,25 @@ function registrar(){
   });
 }
 
+function obtenerUbicacionActual(ok){
+  if(!navigator.geolocation){
+    mostrarAlerta("Este dispositivo no soporta ubicación.");
+    return;
+  }
+  loader.style.display="flex";
+  navigator.geolocation.getCurrentPosition(
+    p=>{
+      loader.style.display="none";
+      ok(p);
+    },
+    ()=>{
+      loader.style.display="none";
+      mostrarAlerta("No se pudo obtener la ubicación.");
+    },
+    { enableHighAccuracy:true }
+  );
+}
+
 function mostrarAlerta(m){
   alertaMsg.innerText = m;
   alerta.style.display="flex";
@@ -275,7 +297,7 @@ function cerrarAlerta(){
 <script>
 if("serviceWorker" in navigator){
   window.addEventListener("load",()=>{
-    navigator.serviceWorker.register("./sw.js").catch(()=>{});
+    navigator.serviceWorker.register("sw.js").catch(()=>{});
   });
 }
 </script>
