--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Asistencia Adecco</title>
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <meta name="theme-color" content="#0b3c5d">
-
 <link rel="manifest" href="manifest.json">
 <script src="https://unpkg.com/html5-qrcode"></script>
 
@@ -57,14 +55,17 @@ button{
 .btn-buscar{background:var(--azul2);color:#fff}
 .btn-entrada{background:var(--verde);color:#fff}
 .btn-salida{background:var(--amarillo);color:#000}
+
+/* 👇 ÚNICO CAMBIO AQUÍ */
 .foto{
   width:110px;
   height:110px;
-  border-radius:50%;
+  border-radius:16px;
   border:4px solid var(--azul2);
   margin:10px auto;
   object-fit:cover;
 }
+
 .reloj{
   font-size:22px;
   font-weight:700;
@@ -165,6 +166,7 @@ button{
     <h3 id="nombre"></h3>
     <p id="cargo"></p>
     <div id="reloj" class="reloj"></div>
+
     <button class="btn-entrada" onclick="abrirQR('ENTRADA')">ENTRADA</button><br><br>
     <button class="btn-salida" onclick="abrirQR('SALIDA')">SALIDA</button>
   </div>
@@ -173,7 +175,6 @@ button{
 <script>
 const API_URL = "https://script.google.com/macros/s/AKfycbzNyyLvzjt0W7SLMI8XO1ODi_Od3udPjt0Uu8sKWQJAl5_vnlDcenWWSPzN-nlqlZxh/exec";
 const QR_VALIDO = "RRHH_ASISTENCIA_OK";
-
 let trabajador = {};
 let tipoActual = "";
 let qr = null;
@@ -194,11 +195,10 @@ setInterval(()=>{
   reloj.innerHTML = `${d.toLocaleTimeString("es-PE")}<span>${d.toLocaleDateString("es-PE")}</span>`;
 },1000);
 
-/* 🔍 BUSCAR (OPTIMIZADO) */
+/* 🔍 BUSCAR */
 function buscar(){
   dni.value = dni.value.replace(/\D/g,'');
-  if(dni.value.length !== 8)
-    return mostrarAlerta("DNI inválido");
+  if(dni.value.length !== 8) return mostrarAlerta("DNI inválido");
 
   loaderText.innerText = "Buscando trabajador…";
   loader.style.display = "flex";
@@ -210,12 +210,11 @@ function buscar(){
   .then(r=>r.json())
   .then(r=>{
     if(!r.ok) throw r.mensaje;
-
     trabajador = r.data;
     p1.style.display = "none";
     p2.style.display = "block";
     nombre.innerText = trabajador.nombre;
-    cargo.innerText  = trabajador.cargo;
+    cargo.innerText = trabajador.cargo;
     foto.src = trabajador.foto || "https://via.placeholder.com/110";
   })
   .catch(e=>mostrarAlerta(e))
@@ -225,14 +224,12 @@ function buscar(){
 /* QR */
 function abrirQR(tipo){
   if(yaMarcoHoy(trabajador.dni,tipo)){
-    confirmacion.style.display="none";
-    loader.style.display="none";
     return mostrarAlerta(`⚠️ Ya registró ${tipo} hoy`);
   }
-
   tipoActual = tipo;
   bloqueado = false;
   qrModal.style.display="flex";
+
   if(!qr) qr = new Html5Qrcode("reader");
 
   qr.start({facingMode:"environment"},{fps:8,qrbox:200},txt=>{
